# SeedSowerDamvout

./: .replit  app.py  init_db.py  models.py  pyproject.toml
static/css/: style.css  style1.css
static/js/: main.js
templates/: admin.html  base.html  course_detail.html  courses.html  courses2.html  dashboard.html  landing.html  login.html  register.html  submissions.html
